<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceSettingActivity">

    <TextView
        android:id="@+id/tvChestPodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_devicesetting_chestpod_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgChestPod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tvChestPodTitle"
        app:layout_constraintTop_toBottomOf="@id/tvChestPodTitle">

        <RadioButton
            android:id="@+id/rbChestPod00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChestPodRadioClicked"
            android:text="@string/str_devicesetting_no_address" />

        <RadioButton
            android:id="@+id/rbChestPod01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChestPodRadioClicked"
            android:text="@string/str_devicesetting_default_address" />

        <RadioButton
            android:id="@+id/rbChestPod02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChestPodRadioClicked"
            android:text="@string/str_devicesetting_default_address" />

        <RadioButton
            android:id="@+id/rbChestPod03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChestPodRadioClicked"
            android:text="@string/str_devicesetting_default_address" />

        <RadioButton
            android:id="@+id/rbChestPod04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChestPodRadioClicked"
            android:text="@string/str_devicesetting_default_address" />
    </RadioGroup>

    <View
        android:id="@+id/dvChestPod"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/rgChestPod"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgChestPod" />

    <TextView
        android:id="@+id/tvSpo2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_devicesetting_spo2_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dvChestPod" />

    <RadioGroup
        android:id="@+id/rgSpO2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tvSpo2Title"
        app:layout_constraintTop_toBottomOf="@id/tvSpo2Title">

        <RadioButton
            android:id="@+id/rbSpO200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSpO2RadioClicked"
            android:text="@string/str_devicesetting_no_address" />

        <RadioButton
            android:id="@+id/rbSpO201"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSpO2RadioClicked"
            android:text="@string/str_devicesetting_default_address" />

        <RadioButton
            android:id="@+id/rbSpO202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSpO2RadioClicked"
            android:text="@string/str_devicesetting_default_address" />

        <RadioButton
            android:id="@+id/rbSpO203"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSpO2RadioClicked"
            android:text="@string/str_devicesetting_default_address" />

        <RadioButton
            android:id="@+id/rbSpO204"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSpO2RadioClicked"
            android:text="@string/str_devicesetting_default_address" />
    </RadioGroup>

    <View
        android:id="@+id/dvUser"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/rgSpO2"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgSpO2" />


    <Spinner
        android:id="@+id/spUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dvUser" />
</androidx.constraintlayout.widget.ConstraintLayout>